--- a/assets/chinese_japanese/results-style.css
+++ b/assets/chinese_japanese/results-style.css
@@ -3,8 +3,9 @@
   src: url("MONOPOLY.ttf");
 }
 body {
-  background-image: url("background.avif");
+  background-image: url("background.jpg");
   display: grid;
+  background-size: cover;
   overflow: hidden;
 }
 button {
