--- a/assets/chinese_japanese/menu-style.css
+++ b/assets/chinese_japanese/menu-style.css
@@ -3,10 +3,11 @@
   src: url("MONOPOLY.ttf");
 }
 body {
-  background-image: url("background.jpg");
+  background-image: url("background.avif");
   display: grid;
   background-size: cover;
   overflow: hidden;
+  user-select: none;
 }
 button {
   font-family: Monopoly, sans-serif;
@@ -95,7 +96,7 @@ select.package {
   align-self: center;
   font-family: Monopoly;
   font-size: 3vmin;
-  background-image: url("background.jpg");
+  background-image: url("background.avif");
   color: yellow;
 }
 p.mode {
@@ -129,6 +130,6 @@ select.mode {
   align-self: center;
   font-family: Monopoly;
   font-size: 3vmin;
-  background-image: url("background.jpg");
+  background-image: url("background.avif");
   color: yellow;
 }
