--- a/assets/chinese_japanese/results-style.css
+++ b/assets/chinese_japanese/results-style.css
@@ -3,10 +3,11 @@
   src: url("MONOPOLY.ttf");
 }
 body {
-  background-image: url("background.jpg");
+  background-image: url("background.avif");
   display: grid;
   background-size: cover;
   overflow: hidden;
+  user-select: none;
 }
 button {
   font-family: Monopoly, sans-serif;
