--- a/assets/original/board-style.css
+++ b/assets/original/board-style.css
@@ -4,10 +4,11 @@
   font-display: swap;
 }
 body {
-  background-image: url("background.avif");
+  background-image: url("background.jpg");
   display: grid;
   background-size: cover;
   overflow: hidden;
+  user-select: none;
 }
 div.loading {
   position: fixed;
