--- a/assets/original/results-style.css
+++ b/assets/original/results-style.css
@@ -3,7 +3,7 @@
   src: url("MONOPOLY.ttf");
 }
 body {
-  background-image: url("background.jpg");
+  background-image: url("background.avif");
   display: grid;
   background-size: cover;
   overflow: hidden;
@@ -15,19 +15,21 @@ button {
 }
 div.score {
   position: fixed;
-  font-family: Monopoly, sans-serif;
-  color: aliceblue;
   left: 0;
   right: 0;
-  top: 50%;
+  top: 0;
   bottom: 0;
   display: block;
   margin: auto;
-  align-self: center;
   text-align: center;
-  width: auto;
-  height: auto;
-  font-size: 5vmin;
+  align-content: center;
+  height: fit-content;
+  word-wrap: break-word;
+  white-space: normal;
+  width: fit-content;
+  font-family: Monopoly;
+  font-size: 6vmin;
+  color: aliceblue;
 }
 button.exitbutton {
   position: fixed;
@@ -46,13 +48,13 @@ button.exitbutton {
   background-color: red;
 }
 img.logo {
-  content: url('logo.avif');
+  content: url("logo.avif");
   position: fixed;
   left: 0;
   right: 0%;
   top: 0%;
-  bottom: 50%;
-  width: 40%;
+  bottom: 60%;
+  width: 30%;
   height: auto;
   display: block;
   margin: auto;
